lintian (2.5.34) UNRELEASED; urgency=medium

  XXX: generate tag summary

  * checks/binaries.desc:
    + [NT] Apply patch from Guillem Jover to improve the tag
      description of the LFS tag.  (Closes: #792167)
  * checks/cruft.pm:
    + [NT] Avoid svn-conflict-file tag for ".r0" files, since
      there cannot be a conflict involving revision 0.
      Thanks to Andreas Beckmann for the report.
      (Closes: #793068)

  * checks/systemd.pm:
    + [NT] Apply patches from Felipe Sateler to ignore known
      masked init.d scripts.  (Closes: #792501)

  * commands/info -> info.pm:
    + [NT] Renamed info to info.pm to remove some boilerplate
      code.
    + [NT] Forbid late --user-dirs and --include-dir options.

  * frontend/lintian:
    + [NT] Forbid late --user-dirs and --include-dir options.
    + [NT] Remove the following obsolete command line
      options: --root, --all, --binary, --source, --udeb.
      They are no longer useful.

  * lib/Lintian/Collect{,/*}.pm:
    + [NT] Add a shared memory cache that can be used to
      reduce memory comsumption a bit for sharable objects.
      (Closes: #715035)
  * lib/Lintian/Data.pm:
    + [NT] Remove references to LINTIAN_ROOT as Lintian::Data
      no longer uses it.
  * lib/Lintian/Path.pm:
    + [NT] Rework some implementation details to reduce memory
      consumption slightly.
    + [NT] The undocumented "type" and "time" methods have been
      removed from the API.
    + [NT] The "uid" and "gid" methods now return 0 rather than
      undef when numeric ownership is not collected.

  * reporting/templates:
    + [NT] Remove (uses of) the "invisible-anchor" css class as
      invisible (display: none) elements cannot be used as
      anchors.

 -- Niels Thykier <niels@thykier.net>  Thu, 09 Jul 2015 21:50:53 +0200

lintian (2.5.33) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - systemd-no-service-for-init-rcS-script