@@ -103,9 +103,15 @@ Certainty: certain
 Experimental: yes
 Info: Tag for tallying static libraries ".comment" sections.
  .
- Be advised that some languages (e.g. OCaml) store bytecode in the
- ".comment" section and you should therefore <i>not</i> blindly
- strip this section.
+ Note that debhelper does not correctly strip these at the moment.
+ If you use debhelper to strip the library, please ignore this tag
+ at the moment.
+
+Tag: unstripped-static-library
+Severity: wishlist
+Certainty: certain
+Experimental: yes
+Info: Tag for tallying unstripped static libraries.
 
 Tag: missing-depends-line
 Severity: normal
