@@ -3,4 +3,6 @@ Sequence: 6000
 Version: 1.0-1
 Type: non-native
 Description: Test checks related to static libs
-Test-For: static-library-has-unneeded-section
+Test-For:
+ static-library-has-unneeded-section
+ unstripped-static-library
