@@ -1,3 +1,3 @@
 X: libfoo-dev: static-library-has-unneeded-section usr/lib/libbar.a(pstripped.o) .comment
-X: libfoo-dev: static-library-has-unneeded-section usr/lib/libfoo.a(code.o) .comment
-X: libfoo-dev: static-library-has-unneeded-section usr/lib/libfoo.a(other.o) .comment
+X: libfoo-dev: unstripped-static-library usr/lib/libfoo.a(code.o)
+X: libfoo-dev: unstripped-static-library usr/lib/libfoo.a(other.o)
